gradio-rag-milvus-vllm-openai/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "4"
  labels:
    app: gradio-rag-milvus-vllm-openai
  name: gradio-rag-milvus-vllm-openai
  namespace: vllm-mistral-7b
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: gradio-rag-milvus-vllm-openai
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gradio-rag-milvus-vllm-openai
    spec:
      containers:
      - env:
        - name: APP_TITLE
          value: Geneva
        - name: SHOW_TITLE_IMAGE
          value: "True"
        - name: INFERENCE_SERVER_URL
          value: https://vllm-mistral-7b-predictor-vllm-mistral-7b.apps.ocp-ia.jccm.es/v1
        - name: MODEL_NAME
          value: /mnt/models/
        - name: MAX_TOKENS
          value: "1024"
        - name: TOP_P
          value: "0.95"
        - name: TEMPERATURE
          value: "0.01"
        - name: PRESENCE_PENALTY
          value: "1.03"
        - name: MILVUS_HOST
          value: vectordb-milvus.milvus-standalone.svc
        - name: MILVUS_PORT
          value: "19530"
        - name: MILVUS_COLLECTIONS_FILE
          value: collections.json
        - name: DEFAULT_COLLECTION
          value: none
        - name: PROMPT_FILE
          value: prompt.txt
        - name: MAX_RETRIEVED_DOCS
          value: "4"
        - name: SCORE_THRESHOLD
          value: "0.99"
#        - name: CURL_CA_BUNDLE
          #value: "/etc/pki/ca-trust/extracted/pem/tls-ca-bundle.pem"
        image: image-registry.apps.ocp-ia.jccm.es/vllm-mistral-7b/gradio-rag-milvus-vllm-openai:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /queue/status
            port: http
            scheme: HTTP
          periodSeconds: 100
          successThreshold: 1
          timeoutSeconds: 8
        name: server
        ports:
        - containerPort: 7860
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /queue/status
            port: http
            scheme: HTTP
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: "2"
            memory: 4Gi
          requests:
            cpu: "1"
            memory: 2Gi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        startupProbe:
          failureThreshold: 24
          httpGet:
            path: /queue/status
            port: http
            scheme: HTTP
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 1
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/app-root/src/collections.json
          name: collections
          subPath: collections.json
        - mountPath: /opt/app-root/src/prompt.txt
          name: prompt
          subPath: prompt.txt
        - mountPath: /opt/app-root/lib/python3.11/site-packages/certifi/cacert.pem
          name: gradio-python-cacert
          subPath: cacert.pem
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 120
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: collections.json
            path: collections.json
          name: collections
        name: collections
      - configMap:
          defaultMode: 420
          items:
          - key: prompt.txt
            path: prompt.txt
          name: prompt
        name: prompt
      - configMap:
          defaultMode: 420
          items:
          - key: cacert.pem
            path: cacert.pem
          name: gradio-python-cacert
        name: gradio-python-cacert
