gradio-rag-milvus-vllm-openai/deployment/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata: 
  name: gradio-rag-milvus-vllm-openai
  labels:
    app: gradio-rag-milvus-vllm-openai
spec:
  host: geneva-gradio.apps.ocp-ia.jccm.es
  to:
    kind: Service
    name: gradio-rag-milvus-vllm-openai
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None
